changed uri to url